maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: ')' expected but 'else' found.
   }else if (getIndication(x, y-1) == 9999){
    ^JediEscaper:49: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:50: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:51: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:52: error: Unmatched closing brace '}' ignored here
}
^